[gd_scene load_steps=6 format=3 uid="uid://v2q6iv14vw7o"]

[ext_resource type="Script" uid="uid://cok2rstynf0cp" path="res://assets/scenes/scn_menu_credits/scn_menu_credits.gd" id="1_8jgjg"]
[ext_resource type="AudioStream" uid="uid://cykg8smnjw88x" path="res://assets/audio/bgm_debuglobby.ogg" id="2_c0qbt"]
[ext_resource type="Texture2D" uid="uid://c2lgkbg1rxaei" path="res://assets/images/glow.png" id="3_k4qpn"]

[sub_resource type="Curve" id="Curve_l47s0"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.135922, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_mqq0n"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="scn_menu_credits" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_8jgjg")

[node name="rich_text_label" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0
bbcode_enabled = true
text = "[font_size=7][i][/i][/font_size]
[font_size=16][center][font=\"res://assets/fonts/nokiafc22.ttf\"][color=YELLOW_GREEN]ChamberGlit[/color][/font][font=\"res://assets/fonts/Milonga-Regular.ttf\"] fue creado por:[/font]
  
[wave amp=1][color=medium_orchid][font_size=20]Sherid4n[/font_size][/color][/wave]
[color=light_gray][font_size=14][i]@the_sherid4n[/i][/font_size][/color]
Director, Música, Historia, Personajes

[wave amp=1][color=medium_aquamarine][font_size=20]Play-Doh[/font_size][/color][/wave]
[color=light_gray][font_size=14][i]@banana_uwu[/i][/font_size][/color]
Director de Arte, Historia, Personajes
  
[wave amp=1][color=indian_red][font_size=20]Dante[/font_size][/color][/wave]
[color=light_gray][font_size=14][i]@dante068454[/i][/font_size][/color]
Artista, Historia, Personajes
  
[wave amp=1][color=gold][font_size=20]Arc[/font_size][/color][/wave]
[color=light_gray][font_size=14][i]@arc_64[/i][/font_size][/color]
Conceptos
  
[wave amp=1][color=chartreuse][font_size=20]Dr_Green[/font_size][/color][/wave]
[color=light_gray][font_size=14][i]@etmegaman[/i][/font_size][/color]
Música, Conceptos "

[node name="label_buttonprompt" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0
bbcode_enabled = true
text = "[img]res://assets/images/buttons/key_x.png[/img] Salir"
vertical_alignment = 2

[node name="audio_stream_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_c0qbt")
pitch_scale = 0.92
autoplay = true

[node name="ptc" type="Node2D" parent="."]
z_index = -1
position = Vector2(320, 240)

[node name="n3" type="CPUParticles2D" parent="ptc"]
modulate = Color(1, 1, 1, 0.301961)
position = Vector2(-200, 0)
scale = Vector2(2, 2)
amount = 64
texture = ExtResource("3_k4qpn")
emission_shape = 1
emission_sphere_radius = 128.0
gravity = Vector2(0, 0)
initial_velocity_max = 400.0
radial_accel_min = 87.5
radial_accel_max = 87.5
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_l47s0")
color = Color(0.396078, 0.486275, 0.568627, 1)
color_ramp = SubResource("Gradient_mqq0n")

[node name="n4" type="CPUParticles2D" parent="ptc"]
modulate = Color(1, 1, 1, 0.301961)
scale = Vector2(2, 2)
amount = 64
texture = ExtResource("3_k4qpn")
emission_shape = 1
emission_sphere_radius = 128.0
gravity = Vector2(0, 0)
initial_velocity_max = 400.0
radial_accel_min = 87.5
radial_accel_max = 87.5
scale_amount_min = 3.0
scale_amount_max = 6.0
scale_amount_curve = SubResource("Curve_l47s0")
color = Color(0.545098, 0.447059, 0.439216, 1)
color_ramp = SubResource("Gradient_mqq0n")
